day 6 act 5 to 8

--- a/Files/Daniel/Day 6/Day 6/buildjar/smartwallet/smartwallet/src/main/resources/application.properties
+++ b/Files/Daniel/Day 6/Day 6/buildjar/smartwallet/smartwallet/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-# --- DEFAULT / DEV CONFIGURATION ---
-
 spring.application.name=smartwallet
-
-# Use In-Memory DB for easy testing
+# Use H2 in-memory database
 spring.datasource.url=jdbc:h2:mem:smartwalletdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Enable Console for debugging
-spring.h2.console.enabled=true
+# Show SQL queries in the console (helpful for learning)
 spring.jpa.show-sql=true
 
-# Default Port
-server.port=8080
+# Enable H2 Console at /h2-console
+spring.h2.console.enabled=true
